# ipinfo

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: downloader.rs  ipinfo.rs  ipinfo_gui.rs  main.rs  mmdb.rs
src/mmdb/: dns.rs  mod.rs
