[package]
name = "ipinfo"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
incremental = false

[dependencies]
byteorder = "1.5.0"
directories = "6.0.0"
thiserror = "2.0.18"
tinyget = { version = "1.1.4", features = ["https"] }
